--- a/homePage.css
+++ b/homePage.css
@@ -355,7 +355,7 @@ html, body {
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-device-width: 770px) {
     .navbar a {
         padding: 50px;
         font-size: 50px;
