--- a/projectsPage.css
+++ b/projectsPage.css
@@ -256,7 +256,7 @@ html, body {
     }
 
     .comingSoonDiv {
-        width: 100%;
+        width: 90%;
         margin: auto;
         padding-top: 500px;
         text-align: center;
@@ -425,7 +425,7 @@ html, body {
     }
     
     .contactDiv {
-        margin-top: 100px;
+        margin-top: 1100px;
         padding-top: 10px;
         padding-bottom: 100px;
         background-color: black;
